crates/tui/tests/snapshots/snapshot_tests__snapshot_users_screen_empty.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Users | [?] Unknown                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Users─────────────────────────────────────────────────────────────────────────┐
│                    No users loaded. Press 'r' to refresh.                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next Screen | Shift+Tab:Previous Screen | q:Quit                         │
└──────────────────────────────────────────────────────────────────────────────┘
