crates/tui/tests/snapshots/snapshot_tests__snapshot_users_screen_with_data.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Users | [?] Unknown                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Users─────────────────────────────────────────────────────────────────────────┐
│admin (System Administrator) - Roles: admin, can_delete - Last login: 17369562│
│power_user (Power User) - Roles: power - Last login: 1736870400s              │
│user_no_roles (Limited User) - Roles: no roles - Last login: never            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ 1:Search 2:Indexes 3:Cluster 4:Jobs 5:Health 6:Saved 7:Logs 8:Apps 9:Users 0:│
└──────────────────────────────────────────────────────────────────────────────┘
