crates/tui/tests/snapshots/snapshot_tests__snapshot_virtual_window_scrolling-2.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│test query                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────┐
│Press Enter to execute search                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌Results (51-60 / 100 total)───────────────────────────────────────────────────┐
│{                                                                             │
│  "id": 50,                                                                   │
│  "message": "Message 50"                                                     │
│}                                                                             │
│{                                                                             │
│  "id": 51,                                                                   │
│  "message": "Message 51"                                                     │
│}                                                                             │
│{                                                                             │
│  "id": 52,                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next Screen | Shift+Tab:Previous Screen | q:Quit                         │
└──────────────────────────────────────────────────────────────────────────────┘
