crates/tui/tests/snapshots/snapshot_tests__snapshot_virtual_window_scrolling-3.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│test query                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────┐
│Press Enter to execute search                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌Results (91-100 / 100 total)──────────────────────────────────────────────────┐
│{                                                                             │
│  "id": 90,                                                                   │
│  "message": "Message 90"                                                     │
│}                                                                             │
│{                                                                             │
│  "id": 91,                                                                   │
│  "message": "Message 91"                                                     │
│}                                                                             │
│{                                                                             │
│  "id": 92,                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next Screen | Shift+Tab:Previous Screen | q:Quit                         │
└──────────────────────────────────────────────────────────────────────────────┘
