crates/tui/tests/snapshots/snapshot_tests__snapshot_virtual_window_scrolling.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│test query                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────┐
│Press Enter to execute search                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌Results (1-10 / 100 total)────────────────────────────────────────────────────┐
│{                                                                             │
│  "id": 0,                                                                    │
│  "message": "Message 0"                                                      │
│}                                                                             │
│{                                                                             │
│  "id": 1,                                                                    │
│  "message": "Message 1"                                                      │
│}                                                                             │
│{                                                                             │
│  "id": 2,                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ 1:Search 2:Indexes 3:Cluster 4:Jobs 5:Health 6:Saved 7:Logs 8:Apps 9:Users 0:│
└──────────────────────────────────────────────────────────────────────────────┘
